Intermittent dom/media/test/test_hevc_playback.html | single tracking bug
Categories
(Core :: Audio/Video: Playback, defect, P5)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox118 | --- | unaffected |
| firefox119 | --- | unaffected |
| firefox120 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: alwu)
References
(Regression)
Details
(Keywords: intermittent-failure, intermittent-testcase, regression, Whiteboard: [retriggered])
Attachments
(2 files)
Filed by: smolnar [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=430706697&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/TdfaoiI_TUaokzYmm6eSvQ/runs/0/artifacts/public/logs/live_backing.log
TEST-PASS | dom/media/test/test_hevc_playback.html | HEVC is supported
[task 2023-09-29T00:48:18.372Z] 00:48:18 INFO - try to play HEVC video
[task 2023-09-29T00:48:18.373Z] 00:48:18 INFO - Buffered messages finished
[task 2023-09-29T00:48:18.373Z] 00:48:18 INFO - TEST-UNEXPECTED-FAIL | dom/media/test/test_hevc_playback.html | Test timed out. -
[task 2023-09-29T00:48:19.170Z] 00:48:19 INFO - GECKO(3320) | MEMORY STAT | vsize 19405701MB | vsizeMaxContiguous 80930219MB | residentFast 905MB
[task 2023-09-29T00:48:19.298Z] 00:48:19 INFO - TEST-OK | dom/media/test/test_hevc_playback.html | took 301648ms
Comment 1•2 years ago
|
||
First occurrence so far, in this range of retriggers and backfills
Alastor, do you have time to look into this?
Thank you.
Comment 2•2 years ago
|
||
Set release status flags based on info from the regressing bug 1853448
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 4•2 years ago
|
||
Adding scheme = https can force restarting Firefox instance for hevc
test so that this test won't be interfered by any previous tests which
might cause hardware decoding disabled.
| Assignee | ||
Comment 5•2 years ago
|
||
What we want to avoid is using hw decoding for size smaller than
132x132, but 132x132 should still be able to use hw decoding. Fix the
incorrect condition check.
Depends on D190123
Comment 7•2 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/5fed323877d6
https://hg.mozilla.org/mozilla-central/rev/6495589271d5
| Comment hidden (Intermittent Failures Robot) |
Description
•