Bug 1855868 - part2 : fix incorrect size check. r=media-playback-reviewers,padenot

What we want to avoid is using hw decoding for size smaller than
132x132, but 132x132 should still be able to use hw decoding. Fix the
incorrect condition check.

Depends on D190123

Differential Revision: https://phabricator.services.mozilla.com/D190124